Fix detail view overflow in Ephesis.

--- a/src/less/cropOntologyWidget.less
+++ b/src/less/cropOntologyWidget.less
@@ -101,6 +101,8 @@
   .details {
     float: left;
     width: 50%;
+    max-height: 600px;
+    overflow-y: auto;
 
     table {
       border: none;
